# mayaku

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
benchmarks/: coco_val_eval.py  fps_inference.py  train_iter_speed.py
benchmarks/fps_sweep/: README.md  assemble.py  bench_one.py  run_sweep.py
benchmarks/rf100vl_curve/: README.md  breakdown.py  common.py  eval_mayaku.py  eval_rfdetr.py  eval_yolo.py  plot.py  plot_one.py  plot_series.py  run_mayaku.py  run_rfdetr.py  run_yolo.py  train_mayaku.py  train_rfdetr.py  train_yolo.py
benchmarks/training_validation/: ram_diagnostic.py  tier3.py
configs/: README.md
configs/d2_baseline/detection/: faster_rcnn_R_101_FPN_3x.yaml  faster_rcnn_R_50_FPN_3x.yaml
configs/d2_baseline/keypoints/: keypoint_rcnn_R_50_FPN_1x.yaml  keypoint_rcnn_R_50_FPN_3x.yaml  keypoint_rcnn_X_101_32x8d_FPN_3x.yaml
configs/d2_baseline/segmentation/: mask_rcnn_R_50_FPN_3x.yaml
configs/detection/: faster_rcnn_R_101_FPN.yaml  faster_rcnn_R_101_FPN_1x.yaml  faster_rcnn_R_101_FPN_1x_llrd.yaml  faster_rcnn_R_101_FPN_3x.yaml  faster_rcnn_R_50_FPN.yaml  faster_rcnn_R_50_FPN_1x.yaml  faster_rcnn_R_50_FPN_1x_llrd.yaml  faster_rcnn_R_50_FPN_1x_modern.yaml  faster_rcnn_R_50_FPN_3x.yaml  faster_rcnn_R_50_FPN_3x_modern.yaml  faster_rcnn_X_101_32x8d_FPN.yaml  faster_rcnn_X_101_32x8d_FPN_1x.yaml  faster_rcnn_X_101_32x8d_FPN_3x.yaml  faster_rcnn_convnext_base_FPN.yaml  faster_rcnn_convnext_base_FPN_1x.yaml  faster_rcnn_convnext_base_FPN_1x_llrd.yaml  faster_rcnn_convnext_large_FPN.yaml  faster_rcnn_convnext_large_FPN_1x.yaml  faster_rcnn_convnext_large_FPN_1x_llrd.yaml  faster_rcnn_convnext_small_FPN.yaml  faster_rcnn_convnext_small_FPN_1x.yaml  faster_rcnn_convnext_small_FPN_1x_llrd.yaml  faster_rcnn_convnext_tiny_FPN.yaml  faster_rcnn_convnext_tiny_FPN_1x.yaml  faster_rcnn_convnext_tiny_FPN_1x_llrd.yaml  mayaku-l-det.yaml  mayaku-l.yaml  mayaku-m-det.yaml  mayaku-m.yaml  mayaku-n-det.yaml  mayaku-n.yaml  mayaku-s-det.yaml  mayaku-s.yaml  mayaku-xl-det.yaml  mayaku-xl.yaml  mayaku-xxl-det.yaml  mayaku-xxl.yaml  query_rcnn_convnext_femto_qgn_nano_FPN_1x.yaml  query_rcnn_convnext_pico_qgn_nano_FPN_1x.yaml  query_rcnn_convnext_tiny_FPN_1x.yaml  (+9 more)
configs/keypoints/: keypoint_rcnn_R_101_FPN.yaml  keypoint_rcnn_R_101_FPN_1x.yaml  keypoint_rcnn_R_101_FPN_3x.yaml  keypoint_rcnn_R_50_FPN.yaml  keypoint_rcnn_R_50_FPN_1x.yaml  keypoint_rcnn_R_50_FPN_1x_modern.yaml  keypoint_rcnn_R_50_FPN_3x.yaml  keypoint_rcnn_R_50_FPN_3x_modern.yaml  keypoint_rcnn_X_101_32x8d_FPN.yaml  keypoint_rcnn_X_101_32x8d_FPN_1x.yaml  keypoint_rcnn_X_101_32x8d_FPN_3x.yaml  mayaku-l-key.yaml  mayaku-l.yaml  mayaku-m-key.yaml  mayaku-m.yaml  mayaku-n-key.yaml  mayaku-n.yaml  mayaku-s-key.yaml  mayaku-s.yaml  mayaku-xl-key.yaml  mayaku-xl.yaml  mayaku-xxl-key.yaml  mayaku-xxl.yaml
configs/segmentation/: mask_rcnn_R_101_FPN.yaml  mask_rcnn_R_101_FPN_1x.yaml  mask_rcnn_R_101_FPN_3x.yaml  mask_rcnn_R_50_FPN.yaml  mask_rcnn_R_50_FPN_1x.yaml  mask_rcnn_R_50_FPN_1x_modern.yaml  mask_rcnn_R_50_FPN_3x.yaml  mask_rcnn_R_50_FPN_3x_modern.yaml  mask_rcnn_X_101_32x8d_FPN.yaml  mask_rcnn_X_101_32x8d_FPN_1x.yaml  mask_rcnn_X_101_32x8d_FPN_3x.yaml  mayaku-l-seg.yaml  mayaku-l.yaml  mayaku-m-seg.yaml  mayaku-m.yaml  mayaku-n-seg.yaml  mayaku-n.yaml  mayaku-s-seg.yaml  mayaku-s.yaml  mayaku-xl-seg.yaml  mayaku-xl.yaml  mayaku-xxl-seg.yaml  mayaku-xxl.yaml
docs/: architecture.md  d2_parity_report.md  detectron2.md  extending.md  portability.md  vs_detectron2.md
docs/decisions/: 001-drop-deformable-convolution.md  002-rgb-native-image-ingestion.md  003-resnet-engine-validated-against-d2.md  004-coreml-export-positioning.md  005-onnx-tensorrt-positioning.md  006-mps-training-recipe.md  README.md
docs/export/: coreml.md  onnx.md  openvino.md  tensorrt.md
examples/: README.md  batch_predict.py  evaluate.py  export_coreml.py  export_onnx.py  export_openvino.py  export_tensorrt.py  finetune.py  predict.py  predict_keypoint.py  predict_segmentation.py  predict_video.py  run_coreml.py  run_onnx.py
models/: README.md
src/mayaku/: __init__.py  api.py  health.py
src/mayaku/backends/: __init__.py  amp.py  device.py  mps.py
src/mayaku/cli/: __init__.py  __main__.py  _factory.py  _weights.py  download.py  eval.py  export.py  predict.py  train.py
src/mayaku/config/: __init__.py  io.py  schedules.py  schemas.py
src/mayaku/configs/: __init__.py
src/mayaku/data/: __init__.py  catalog.py  collate.py  descriptor.py  mapper.py  multi_sample.py  samplers.py  serialize.py  shared.py
src/mayaku/engine/: __init__.py  callbacks.py  distributed.py  ema.py  evaluator.py  optim.py  trainer.py
src/mayaku/inference/: __init__.py  artifact.py  postprocess.py  predictor.py
src/mayaku/models/: poolers.py
src/mayaku/structures/: __init__.py  boxes.py  image_list.py  instances.py  (+2 more)
tests/: conftest.py  test_query_rcnn.py  test_smoke.py  test_uniquery.py
tests/unit/: _checkpoint.py  _distributed_workers.py  test_amp.py  test_anchor_generator.py  test_api_evaluate.py  test_api_train.py  test_artifact.py  test_box_head_and_fast_rcnn.py  test_box_regression.py  test_boxes.py  test_checkpoint_metadata.py  test_cli.py  test_cli_auto_config.py  test_config_family.py  test_config_io.py  test_config_schedules.py  test_config_schemas.py  test_convnext_backbone.py  test_coreml_export.py  test_data_catalog.py  test_data_coco_and_mapper.py  test_data_samplers.py  test_data_transforms.py  test_dataset_descriptor.py  test_device.py  test_distributed.py  test_download_model.py  test_ema.py  test_engine_callbacks.py  test_engine_optim.py  test_engine_trainer.py  test_evaluator.py  test_faster_rcnn.py  test_fpn.py  test_freeze_warning.py  test_frozen_bn.py  test_grad_accum.py  test_health.py  test_image_list.py  test_image_utils.py  (+32 more)
tools/: README.md  convert_all_d2.sh  convert_convnext_backbone.py  convert_d2_checkpoint.py  d2_model_zoo.tsv  d2_parity_diff.py  download_balloon.py  export_all.py  gen_configs.py  generate_manifest.py  split_coco_val.py  strip_seg_head.py  train_mayaku.py  zip_mlpackages.py
(+66 files in other folders)
